--- a/search-state/package.json
+++ b/search-state/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@ngneat/transloco": "^6.0.4",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "ng-zorro-antd": "^17.4.1",
